External/Releases/A/6-100/V2024.03.31/Body/README.md
***

# 4 year anniversary update (Beta 10, 2024, Sunday, March 31st)

**Tag:** `V2024.03.31`

**Released on:** `2024, Sunday, March 31st at 4:16 pm PST`

***Pre-release***

This is the 10th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the seventh beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

---

## What's Changed (manually written by @seanpm2001)

- Archives: Archived data for release 9, archived data for discussion 80, archived files related to the 10th remodel
- README: Updated README to version 84
- New media: logos (official and placeholder) for `MetroTechno` `NUNIX` `PDSNet++` and `PNCE`
- Other: No other changes

***
