External/Releases/A/6-100/V2024.04.03/Body/README.md

***

# 4 year anniversary update (Beta 13, 2024, Wednesday, April 3rd)

**Tag:** `V2024.04.03`

**Released on:** `2024, Wednesday, April 3rd at 06:09 pm PST`

***Pre-release***

This is the 13th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the tenth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

---

## What's Changed (manually written by @seanpm2001)

- Archives: Archived data for release 12, archived data for discussion 83, archived files related to the 13th remodel
- README: Updated README to version 87
- New media: Logos (official and placeholder) for `Projects:other`
- Media directory: Added browser tab information
- Other: No other changes

***
